Parcial1/Punto5/gramaticaaParser.py
# Generated from gramaticaa.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


import math


class gramaticaaParser ( Parser ):

    grammarFileName = "gramaticaa.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'Sin('", "')'", "'Cos('", "'Tan('" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "NUMBER", "NEWLINE", "WS" ]

    RULE_file = 0
    RULE_expr = 1
    RULE_trigFunc = 2

    ruleNames =  [ "file", "expr", "trigFunc" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    NUMBER=5
    NEWLINE=6
    WS=7

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class FileContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(gramaticaaParser.EOF, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramaticaaParser.ExprContext)
            else:
                return self.getTypedRuleContext(gramaticaaParser.ExprContext,i)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(gramaticaaParser.NEWLINE)
            else:
                return self.getToken(gramaticaaParser.NEWLINE, i)

        def getRuleIndex(self):
            return gramaticaaParser.RULE_file

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFile" ):
                listener.enterFile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFile" ):
                listener.exitFile(self)




    def file_(self):

        localctx = gramaticaaParser.FileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_file)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 12
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 26) != 0):
                self.state = 6
                self.expr()
                self.state = 8
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==6:
                    self.state = 7
                    self.match(gramaticaaParser.NEWLINE)


                self.state = 14
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 15
            self.match(gramaticaaParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def trigFunc(self):
            return self.getTypedRuleContext(gramaticaaParser.TrigFuncContext,0)


        def getRuleIndex(self):
            return gramaticaaParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)




    def expr(self):

        localctx = gramaticaaParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_expr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 17
            self.trigFunc()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TrigFuncContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.number = None # Token

        def NUMBER(self):
            return self.getToken(gramaticaaParser.NUMBER, 0)

        def getRuleIndex(self):
            return gramaticaaParser.RULE_trigFunc

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTrigFunc" ):
                listener.enterTrigFunc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTrigFunc" ):
                listener.exitTrigFunc(self)




    def trigFunc(self):

        localctx = gramaticaaParser.TrigFuncContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_trigFunc)
        try:
            self.state = 31
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 19
                self.match(gramaticaaParser.T__0)
                self.state = 20
                localctx.number = self.match(gramaticaaParser.NUMBER)
                self.state = 21
                self.match(gramaticaaParser.T__1)
                print(math.sin(math.radians(int((None if localctx.number is None else localctx.number.text)))))
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 2)
                self.state = 23
                self.match(gramaticaaParser.T__2)
                self.state = 24
                localctx.number = self.match(gramaticaaParser.NUMBER)
                self.state = 25
                self.match(gramaticaaParser.T__1)
                print(math.cos(math.radians(int((None if localctx.number is None else localctx.number.text)))))
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 3)
                self.state = 27
                self.match(gramaticaaParser.T__3)
                self.state = 28
                localctx.number = self.match(gramaticaaParser.NUMBER)
                self.state = 29
                self.match(gramaticaaParser.T__1)
                print(math.tan(math.radians(int((None if localctx.number is None else localctx.number.text)))))
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





